# orphan-scan

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  bot.sh  pyproject.toml
.github/workflows/: ci.yml
scripts/: check.sh  fix.sh  prototype_osc_bse_fanout.py
src/bugowner/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_setup.py  network.py  preflight.py  report.py  runner.py
src/bugowner/pipeline/: __init__.py  diff.py  maintainership.py  orphans.py  sources.py
src/compose_orphans/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_setup.py  network.py  runner.py
src/compose_orphans/pipeline/: __init__.py  diff.py  maintainership.py  orphans.py  sources.py
src/orphan_scan/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  known_hosts  logging_setup.py  network.py  report.py  runner.py
src/orphan_scan/pipeline/: __init__.py  diff.py  maintainership.py  orphans.py  sources.py
tests/: bot.bats
tests/helpers/: common.bash  fixtures.bash
tests/python/: conftest.py
tests/python/fixtures/: binaries.txt  maintainership.json  real_diff.patch  sources.txt
tests/python/integration/: test_cli.py  test_library_api.py
tests/python/unit/: test_config.py  test_exceptions.py  test_logging_setup.py  test_network.py  test_pipeline_diff.py  test_pipeline_maintainership.py  test_pipeline_orphans.py  test_pipeline_sources.py  test_report.py  test_runner.py  test_smoke.py
