[project]
name = "bugowner"
version = "0.1.0"
description = "Detect orphan source packages in the SLES product compose"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Gustavo Yokoyama Ribeiro"}]
requires-python = ">=3.9"
keywords = ["ci", "suse", "obs", "maintainership", "sles"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]

[project.scripts]
bugowner = "bugowner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bugowner" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
markers = ["integration: end-to-end tests (slower)"]

[tool.coverage.run]
branch = true
source = ["src/bugowner"]
omit = ["src/bugowner/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PIE", "SIM", "TCH"]
ignore = []

[tool.mypy]
files = ["src"]
strict = true
