[project]
name = "orphan-scan"
dynamic = ["version"]
description = "Find orphan packages in the productcompose"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Gustavo Yokoyama Ribeiro"}]
requires-python = ">=3.11"
keywords = ["ci", "suse", "obs", "maintainership", "sles"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]

[project.scripts]
orphan-scan = "orphan_scan.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy", "bandit>=1.7"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/orphan_scan"]
exclude = ["*,cover"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
markers = ["integration: end-to-end tests (slower)"]

[tool.coverage.run]
branch = true
source = ["src/orphan_scan"]
omit = ["src/orphan_scan/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PIE", "SIM", "TCH"]
ignore = []

[tool.mypy]
files = ["src"]
strict = true
